--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Realtime anonymous feedback app for workshop facilitators"
     />
+    <meta
+      name="keywords"
+      content="mood, checker, anonymous, workshop, facilitation, feedback, polling, high five, chat"
+    />
+    <meta name="author" content="Daisuke Yukita" />
+
+    <!-- OGP -->
+    <meta property="og:title" content="Mood Checker" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://moodchecker.app" />
+    <meta property="og:image" content="https://moodchecker.app/ogp.png" />
+    <meta property="og:site_name" content="Mood Checker" />
+    <meta
+      property="og:description"
+      content="Realtime anonymous feedback app for workshop facilitators"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
